--- a/changelog.txt
+++ b/changelog.txt
@@ -40,5 +40,5 @@
 <li> ثابت تعيين الحد الأقصى للحجم عند مشاركة الفيديو </ li>
 <li> أخرى ثابتة </ li>
 
-"،" url ":" http://bit.ly/wa-plus-latest-version "
+"،" url ":" https://aligama92358.blogspot.com/2020/11/whatsapp-plus.html "
 }
